--- a/carrito.html
+++ b/carrito.html
@@ -1,331 +1,238 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Carrito · Miranda Flow Boutique</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Carrito | Miranda Flow Boutique</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
-  <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+<style>
+*{margin:0;padding:0;box-sizing:border-box}
+body{
+  font-family:'Inter',sans-serif;
+  background:#000;
+  color:#fff;
+  overflow-x:hidden;
+}
 
-    body {
-      font-family: 'Montserrat', sans-serif;
-      background: #060606;
-      color: #fff;
-      overflow-x: hidden;
-    }
+/* Glow background */
+.bg{
+  position:fixed;
+  inset:-30%;
+  background:
+    radial-gradient(900px 500px at 20% 20%, rgba(0,120,255,.15), transparent),
+    radial-gradient(800px 500px at 80% 80%, rgba(0,255,180,.12), transparent);
+  filter:blur(120px);
+  z-index:-1;
+}
 
-    a { color: inherit; text-decoration: none; }
+/* Header */
+header{
+  position:fixed;
+  top:0;left:0;width:100%;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:20px 32px;
+  background:rgba(0,0,0,.55);
+  backdrop-filter:blur(16px);
+  border-bottom:1px solid rgba(255,255,255,.08);
+  z-index:10;
+}
+.brand{
+  display:flex;
+  align-items:center;
+  gap:12px;
+}
+.brand img{
+  width:42px;
+  height:42px;
+  border-radius:10px;
+}
+.brand span{
+  font-weight:800;
+  letter-spacing:.2em;
+  font-size:.75rem;
+  opacity:.85;
+}
+.nav{
+  display:flex;
+  gap:28px;
+}
+.nav a{
+  color:#fff;
+  text-decoration:none;
+  font-size:.85rem;
+  letter-spacing:.12em;
+  opacity:.75;
+}
+.nav a:hover{opacity:1}
 
-    /* ===== TOP BAR ===== */
-    .topbar {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      padding: 16px 6%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: rgba(0,0,0,.65);
-      backdrop-filter: blur(12px);
-      z-index: 1000;
-    }
+/* Back button */
+.back{
+  position:fixed;
+  top:92px;
+  left:24px;
+  width:46px;
+  height:46px;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:rgba(255,255,255,.08);
+  backdrop-filter:blur(10px);
+  font-size:1.2rem;
+  cursor:pointer;
+  transition:.3s;
+  z-index:5;
+}
+.back:hover{background:rgba(255,255,255,.18)}
 
-    .leftbar {
-      display: flex;
-      align-items: center;
-      gap: 14px;
-    }
+/* Main */
+.main{
+  padding:160px 10vw 120px;
+  max-width:1200px;
+  margin:auto;
+}
 
-    .back {
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
-      font-weight: 800;
-      letter-spacing: 1px;
-      opacity: .8;
-    }
+.main h1{
+  font-size:clamp(2.5rem,5vw,4rem);
+  font-weight:800;
+  letter-spacing:.15em;
+  margin-bottom:40px;
+}
 
-    .logo img {
-      height: 34px;
-      filter: drop-shadow(0 4px 12px rgba(0,0,0,.6));
-    }
+/* Cart items */
+.item{
+  display:grid;
+  grid-template-columns:120px 1fr auto;
+  gap:30px;
+  align-items:center;
+  padding:24px;
+  margin-bottom:20px;
+  background:rgba(255,255,255,.05);
+  border-radius:22px;
+}
+.item img{
+  width:120px;
+  border-radius:16px;
+}
+.item h3{
+  font-size:1rem;
+  letter-spacing:.12em;
+}
+.item p{
+  opacity:.6;
+  font-size:.85rem;
+}
 
-    .lang button {
-      border: 0;
-      background: transparent;
-      color: #fff;
-      font-weight: 900;
-      letter-spacing: 1px;
-      opacity: .45;
-      cursor: pointer;
-      font-size: 14px;
-    }
+/* Price */
+.price{
+  font-size:1rem;
+  opacity:.8;
+}
 
-    .lang button.active { opacity: 1; }
+/* Summary */
+.summary{
+  margin-top:60px;
+  padding:40px;
+  border-radius:28px;
+  background:rgba(255,255,255,.06);
+}
+.summary h2{
+  font-size:1.4rem;
+  letter-spacing:.12em;
+  margin-bottom:20px;
+}
+.summary p{
+  opacity:.7;
+  margin-bottom:30px;
+}
 
-    /* ===== PAGE ===== */
-    .page {
-      padding: 120px 6% 90px;
-      min-height: 100vh;
-      background:
-        radial-gradient(700px 420px at 50% 20%, rgba(255,0,150,.18), transparent 60%),
-        radial-gradient(650px 420px at 80% 90%, rgba(0,140,255,.18), transparent 60%),
-        #060606;
-    }
-
-    h1 {
-      font-size: clamp(32px, 4vw, 52px);
-      font-weight: 900;
-      margin-bottom: 40px;
-      text-transform: uppercase;
-      text-shadow: 0 14px 40px rgba(0,0,0,.75);
-    }
-
-    /* ===== CART ===== */
-    .cart {
-      max-width: 980px;
-      margin: 0 auto;
-    }
-
-    .item {
-      display: grid;
-      grid-template-columns: 120px 1fr auto;
-      gap: 22px;
-      padding: 22px;
-      margin-bottom: 22px;
-      background: rgba(20,20,20,.85);
-      border-radius: 22px;
-      border: 1px solid rgba(255,255,255,.08);
-    }
-
-    .item img {
-      width: 100%;
-      height: 120px;
-      object-fit: cover;
-      border-radius: 14px;
-    }
-
-    .item h3 {
-      font-size: 18px;
-      font-weight: 800;
-    }
-
-    .item p {
-      font-size: 14px;
-      opacity: .75;
-      margin: 6px 0 12px;
-    }
-
-    .qty {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-top: 10px;
-    }
-
-    .qty button {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      border: 1px solid rgba(255,255,255,.2);
-      background: transparent;
-      color: #fff;
-      font-weight: 900;
-      cursor: pointer;
-    }
-
-    .remove {
-      opacity: .6;
-      cursor: pointer;
-      font-size: 13px;
-      margin-top: 8px;
-    }
-
-    .price {
-      font-weight: 900;
-      font-size: 18px;
-      align-self: center;
-    }
-
-    /* ===== SUMMARY ===== */
-    .summary {
-      max-width: 980px;
-      margin: 60px auto 0;
-      padding: 28px;
-      background: rgba(10,10,10,.85);
-      border-radius: 22px;
-      border: 1px solid rgba(255,255,255,.1);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-
-    .total {
-      font-size: 24px;
-      font-weight: 900;
-    }
-
-    .btn {
-      padding: 16px 22px;
-      border-radius: 16px;
-      font-weight: 900;
-      letter-spacing: 1px;
-      border: 1px solid rgba(255,255,255,.2);
-      background: #0b0b0b;
-      color: #fff;
-      cursor: pointer;
-    }
-
-    .empty {
-      text-align: center;
-      opacity: .7;
-      margin-top: 120px;
-    }
-
-    @media (max-width: 768px) {
-      .item {
-        grid-template-columns: 1fr;
-      }
-      .price {
-        align-self: flex-start;
-      }
-    }
-  </style>
+.actions{
+  display:flex;
+  gap:20px;
+  flex-wrap:wrap;
+}
+.actions a{
+  padding:14px 30px;
+  border-radius:999px;
+  text-decoration:none;
+  font-size:.75rem;
+  letter-spacing:.14em;
+  transition:.3s;
+}
+.primary{
+  background:#fff;
+  color:#000;
+}
+.secondary{
+  border:1px solid rgba(255,255,255,.3);
+  color:#fff;
+}
+.secondary:hover{
+  background:#fff;
+  color:#000;
+}
+</style>
 </head>
 
 <body>
 
-  <!-- TOP -->
-  <div class="topbar">
-    <div class="leftbar">
-      <a class="back" href="tienda.html">← <span data-es="Tienda" data-en="Store">Tienda</span></a>
-      <div class="logo">
-        <img src="logo.jpg" alt="Miranda Flow Boutique">
-      </div>
-    </div>
+<div class="bg"></div>
 
-    <div class="lang">
-      <button class="active" data-lang="es">ES</button>
-      <button data-lang="en">EN</button>
+<header>
+  <div class="brand">
+    <img src="logo.jpg">
+    <span>BOUTIQUE · MIRANDA FLOW</span>
+  </div>
+  <nav class="nav">
+    <a href="index.html">INICIO</a>
+    <a href="tienda.html">TIENDA</a>
+  </nav>
+</header>
+
+<a href="tienda.html" class="back">←</a>
+
+<section class="main">
+
+  <h1>CARRITO</h1>
+
+  <!-- Item demo -->
+  <div class="item">
+    <img src="exclusive-1.jpg">
+    <div>
+      <h3>PIEZA EXCLUSIVA</h3>
+      <p>Producto de muestra · Ecosistema Miranda Flow</p>
+    </div>
+    <div class="price">$120</div>
+  </div>
+
+  <div class="item">
+    <img src="exclusive-2.jpg">
+    <div>
+      <h3>COLECCIÓN LIMITADA</h3>
+      <p>Visual demo · Maqueta funcional</p>
+    </div>
+    <div class="price">$140</div>
+  </div>
+
+  <div class="summary">
+    <h2>RESUMEN</h2>
+    <p>
+      Este carrito es una maqueta visual.  
+      No se realizan cobros reales.  
+      Sirve para mostrar el flujo completo del ecosistema.
+    </p>
+
+    <div class="actions">
+      <a href="tienda.html" class="secondary">SEGUIR COMPRANDO</a>
+      <a href="#" class="primary">FINALIZAR (DEMO)</a>
     </div>
   </div>
 
-  <!-- PAGE -->
-  <main class="page">
-    <div class="cart">
-      <h1 data-es="Tu Selección" data-en="Your Selection">Tu Selección</h1>
-
-      <div id="cartItems"></div>
-
-      <div class="summary" id="summary" style="display:none;">
-        <div class="total" id="total">$0</div>
-        <button class="btn" data-es="Proceder al pago" data-en="Proceed to checkout">
-          Proceder al pago
-        </button>
-      </div>
-
-      <div class="empty" id="empty"
-        data-es="Tu carrito está vacío."
-        data-en="Your cart is empty.">
-        Tu carrito está vacío.
-      </div>
-    </div>
-  </main>
-
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-
-  /* ===== LANGUAGE ===== */
-  const buttons = document.querySelectorAll(".lang button");
-  const trans = document.querySelectorAll("[data-es][data-en]");
-  function setLang(lang) {
-    buttons.forEach(b => b.classList.toggle("active", b.dataset.lang === lang));
-    trans.forEach(el => el.textContent = el.dataset[lang]);
-    document.documentElement.lang = lang;
-    render();
-  }
-  buttons.forEach(btn => btn.addEventListener("click", () => setLang(btn.dataset.lang)));
-
-  /* ===== CART ===== */
-  function getCart() {
-    try { return JSON.parse(localStorage.getItem("mf_cart")) || []; }
-    catch { return []; }
-  }
-
-  function setCart(cart) {
-    localStorage.setItem("mf_cart", JSON.stringify(cart));
-  }
-
-  const cartEl = document.getElementById("cartItems");
-  const emptyEl = document.getElementById("empty");
-  const summaryEl = document.getElementById("summary");
-  const totalEl = document.getElementById("total");
-
-  function render() {
-    const cart = getCart();
-    cartEl.innerHTML = "";
-
-    if (!cart.length) {
-      emptyEl.style.display = "block";
-      summaryEl.style.display = "none";
-      return;
-    }
-
-    emptyEl.style.display = "none";
-    summaryEl.style.display = "flex";
-
-    let total = 0;
-
-    cart.forEach((item, idx) => {
-      total += item.price * item.qty;
-
-      const div = document.createElement("div");
-      div.className = "item";
-      div.innerHTML = `
-        <img src="${item.image}" alt="">
-        <div>
-          <h3>${item.name}</h3>
-          <p>$${item.price}</p>
-          <div class="qty">
-            <button data-i="${idx}" data-a="dec">−</button>
-            <strong>${item.qty}</strong>
-            <button data-i="${idx}" data-a="inc">+</button>
-          </div>
-          <div class="remove" data-i="${idx}">Eliminar</div>
-        </div>
-        <div class="price">$${item.price * item.qty}</div>
-      `;
-      cartEl.appendChild(div);
-    });
-
-    totalEl.textContent = "$" + total;
-  }
-
-  cartEl.addEventListener("click", e => {
-    const i = e.target.dataset.i;
-    if (i === undefined) return;
-
-    const cart = getCart();
-
-    if (e.target.dataset.a === "inc") cart[i].qty++;
-    if (e.target.dataset.a === "dec") {
-      cart[i].qty--;
-      if (cart[i].qty <= 0) cart.splice(i, 1);
-    }
-    if (e.target.classList.contains("remove")) cart.splice(i, 1);
-
-    setCart(cart);
-    render();
-  });
-
-  render();
-});
-</script>
+</section>
 
 </body>
 </html>
