--- a/prendas.html
+++ b/prendas.html
@@ -5,145 +5,93 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Prendas | Miranda Flow</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 body{
-    font-family:'Inter',sans-serif;
-    background:#000;
-    color:#fff;
-    overflow-x:hidden;
+  font-family:'Inter',sans-serif;
+  background:#000;
+  color:#fff;
 }
 
-/* ===== FONDO ===== */
-.bg{
-    position:fixed;
-    inset:-30%;
-    background:
-      radial-gradient(800px 500px at 20% 30%,rgba(0,255,200,.15),transparent 60%),
-      radial-gradient(900px 600px at 80% 70%,rgba(0,120,255,.12),transparent 60%);
-    filter:blur(90px);
-    z-index:-1;
-}
-
-/* ===== HEADER ===== */
+/* HEADER */
 header{
-    position:fixed;
-    top:0;
-    width:100%;
-    height:80px;
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    padding:0 40px;
-    background:rgba(0,0,0,.6);
-    backdrop-filter:blur(12px);
-    z-index:10;
+  position:fixed;
+  top:0;
+  width:100%;
+  padding:18px 22px;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  background:rgba(0,0,0,.9);
+  z-index:100;
 }
 
-.logo{
-    display:flex;
-    align-items:center;
-    gap:12px;
-}
-.logo img{width:38px}
-.logo span{
-    font-weight:700;
-    letter-spacing:3px;
+header a{
+  color:#fff;
+  text-decoration:none;
+  font-size:20px;
 }
 
-nav{
-    display:flex;
-    gap:30px;
-    font-size:14px;
-    letter-spacing:2px;
-}
-nav a{
-    color:#aaa;
-    text-decoration:none;
-}
-nav a:hover{color:#fff}
-
-/* ===== VOLVER ===== */
-.back{
-    position:fixed;
-    left:20px;
-    top:100px;
-    font-size:20px;
-    color:#fff;
-    text-decoration:none;
-    opacity:.7;
-}
-.back:hover{opacity:1}
-
-/* ===== HERO ===== */
-.hero{
-    padding:160px 8vw 80px;
+/* CONTENT */
+.main{
+  padding:120px 20px 80px;
 }
 
-.hero h1{
-    font-size:70px;
-    font-weight:800;
-    letter-spacing:10px;
+h1{
+  font-size:46px;
+  margin-bottom:10px;
 }
 
-.hero p{
-    margin-top:20px;
-    color:#aaa;
-    max-width:520px;
+p{
+  color:#aaa;
+  margin-bottom:40px;
 }
 
-/* ===== GRID PRENDAS ===== */
-.grid{
-    padding:60px 8vw 120px;
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-    gap:40px;
+/* CARDS */
+.cards{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+  gap:26px;
 }
 
 .card{
-    position:relative;
-    border-radius:28px;
-    overflow:hidden;
-    background:#111;
-    height:340px;
-    cursor:pointer;
-    transform:translateY(40px);
-    opacity:0;
-    animation:fadeUp .9s ease forwards;
+  background:rgba(255,255,255,.05);
+  border-radius:24px;
+  padding:60px 20px;
+  text-align:center;
+  font-size:22px;
+  font-weight:700;
+  letter-spacing:2px;
+  transition:.4s;
 }
 
-.card:nth-child(2){animation-delay:.2s}
-.card:nth-child(3){animation-delay:.4s}
-.card:nth-child(4){animation-delay:.6s}
-
-.card img{
-    width:100%;
-    height:100%;
-    object-fit:cover;
-    opacity:.85;
-    transition:.6s;
+.card:hover{
+  transform:translateY(-8px);
+  background:rgba(255,255,255,.1);
 }
+</style>
+</head>
 
-.card:hover img{
-    transform:scale(1.1);
-    opacity:1;
-}
+<body>
 
-.card span{
-    position:absolute;
-    bottom:30px;
-    left:30px;
-    font-size:26px;
-    font-weight:700;
-    letter-spacing:4px;
-}
+<header>
+  <a href="index.html">←</a>
+  <a href="tienda.html">TIENDA</a>
+</header>
 
-.card small{
-    position:absolute;
-    bottom:10px;
-    left:30px;
-    color:#bbb;
-    letter-spacing:2px;
-    font-size:12
+<section class="main">
+  <h1>PRENDAS</h1>
+  <p>Categorías que abren universos. Cada bloque es una puerta.</p>
+
+  <div class="cards">
+    <div class="card">RELOJES</div>
+    <div class="card">CADENAS</div>
+    <div class="card">ANILLOS</div>
+    <div class="card">ACCESORIOS</div>
+  </div>
+</section>
+
+</body>
+</html>
