--- a/index.html
+++ b/index.html
@@ -3,282 +3,225 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Miranda Flow Boutique</title>
+<title>Producto | Miranda Flow Boutique</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
+html{scroll-behavior:smooth}
 body{
-    font-family:'Inter',sans-serif;
-    background:#000;
-    color:#fff;
-    overflow-x:hidden;
+  font-family:'Inter',sans-serif;
+  background:#000;
+  color:#fff;
+  overflow-x:hidden;
 }
 
-/* ===== FONDO GLOW ===== */
+/* Glow background */
 .bg{
-    position:fixed;
-    inset:-30%;
-    background:
-      radial-gradient(800px 500px at 20% 30%,rgba(0,255,200,.18),transparent 60%),
-      radial-gradient(900px 600px at 80% 70%,rgba(0,120,255,.15),transparent 60%);
-    filter:blur(80px);
-    z-index:-2;
+  position:fixed;
+  inset:-30%;
+  background:
+    radial-gradient(900px 500px at 20% 10%, rgba(0,120,255,.15), transparent),
+    radial-gradient(800px 500px at 80% 80%, rgba(0,255,180,.12), transparent);
+  filter:blur(120px);
+  z-index:-1;
 }
 
-/* ===== HEADER ===== */
+/* Header */
 header{
-    position:fixed;
-    top:0;
-    width:100%;
-    height:80px;
-    display:flex;
-    align-items:center;
-    justify-content:space-between;
-    padding:0 40px;
-    background:rgba(0,0,0,.55);
-    backdrop-filter:blur(12px);
-    z-index:100;
+  position:fixed;
+  top:0;left:0;width:100%;
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:20px 32px;
+  background:rgba(0,0,0,.55);
+  backdrop-filter:blur(16px);
+  border-bottom:1px solid rgba(255,255,255,.08);
+  z-index:10;
+}
+.brand{
+  display:flex;
+  align-items:center;
+  gap:12px;
+}
+.brand img{
+  width:42px;
+  height:42px;
+  border-radius:10px;
+}
+.brand span{
+  font-weight:800;
+  letter-spacing:.2em;
+  font-size:.75rem;
+  opacity:.85;
+}
+.nav{
+  display:flex;
+  gap:28px;
+}
+.nav a{
+  color:#fff;
+  text-decoration:none;
+  font-size:.85rem;
+  letter-spacing:.12em;
+  opacity:.75;
+  transition:.3s;
+}
+.nav a:hover{opacity:1}
+
+/* Back button */
+.back{
+  position:fixed;
+  top:92px;
+  left:24px;
+  width:46px;
+  height:46px;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:rgba(255,255,255,.08);
+  backdrop-filter:blur(10px);
+  font-size:1.2rem;
+  cursor:pointer;
+  transition:.3s;
+  z-index:5;
+}
+.back:hover{background:rgba(255,255,255,.18)}
+
+/* Product layout */
+.main{
+  padding:160px 10vw 120px;
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:80px;
+}
+@media(max-width:900px){
+  .main{grid-template-columns:1fr}
 }
 
-.logo{
-    display:flex;
-    align-items:center;
-    gap:12px;
+/* Image */
+.product-img{
+  background:rgba(255,255,255,.04);
+  border-radius:32px;
+  padding:40px;
 }
-.logo img{
-    width:40px;
-}
-.logo span{
-    font-weight:700;
-    letter-spacing:3px;
+.product-img img{
+  width:100%;
+  border-radius:24px;
 }
 
-nav{
-    display:flex;
-    gap:35px;
-    font-size:14px;
-    letter-spacing:2px;
+/* Info */
+.info h1{
+  font-size:clamp(2.2rem,4vw,3.5rem);
+  font-weight:800;
+  letter-spacing:.15em;
 }
-nav a{
-    color:#aaa;
-    text-decoration:none;
-    transition:.3s;
-}
-nav a:hover{color:#fff}
-
-/* ===== CARRITO ICONO ===== */
-.cart{
-    position:fixed;
-    right:20px;
-    top:50%;
-    transform:translateY(-50%);
-    width:55px;
-    height:55px;
-    border-radius:50%;
-    background:#fff;
-    color:#000;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:22px;
-    cursor:pointer;
-    box-shadow:0 0 25px rgba(255,255,255,.4);
-    z-index:99;
-}
-.cart:hover{transform:translateY(-50%) scale(1.1)}
-
-/* ===== HERO ===== */
-.hero{
-    min-height:100vh;
-    display:flex;
-    align-items:center;
-    padding:120px 8vw 80px;
-    position:relative;
+.info p{
+  margin-top:18px;
+  opacity:.7;
+  line-height:1.7;
+  max-width:520px;
 }
 
-.hero-card{
-    max-width:520px;
-    background:rgba(255,255,255,.06);
-    backdrop-filter:blur(16px);
-    padding:50px;
-    border-radius:28px;
-    animation:fadeUp 1.2s ease forwards;
+/* Tags */
+.tags{
+  display:flex;
+  gap:12px;
+  margin:26px 0;
+  flex-wrap:wrap;
+}
+.tag{
+  padding:8px 16px;
+  border-radius:999px;
+  background:rgba(255,255,255,.08);
+  font-size:.7rem;
+  letter-spacing:.14em;
 }
 
-.hero h1{
-    font-size:64px;
-    font-weight:800;
-    line-height:1;
-    margin-bottom:20px;
-}
-
-.hero p{
-    color:#ccc;
-    font-size:16px;
-    margin-bottom:30px;
-}
-
+/* Actions */
 .actions{
-    display:flex;
-    flex-direction:column;
-    gap:15px;
+  margin-top:32px;
+  display:flex;
+  gap:18px;
+  flex-wrap:wrap;
 }
-
 .actions a{
-    padding:16px 22px;
-    border-radius:14px;
-    text-decoration:none;
-    text-align:center;
-    font-weight:600;
-    letter-spacing:2px;
+  padding:14px 26px;
+  border-radius:999px;
+  text-decoration:none;
+  font-size:.75rem;
+  letter-spacing:.14em;
+  transition:.3s;
+}
+.primary{
+  background:#fff;
+  color:#000;
+}
+.primary:hover{opacity:.85}
+.secondary{
+  border:1px solid rgba(255,255,255,.3);
+  color:#fff;
+}
+.secondary:hover{
+  background:#fff;
+  color:#000;
 }
 
-.btn-main{
-    background:#fff;
-    color:#000;
-}
-.btn-alt{
-    border:1px solid rgba(255,255,255,.3);
-    color:#fff;
-}
-
-/* ===== LOGO GIGANTE ===== */
-.logo-bg{
-    position:absolute;
-    right:-10%;
-    top:10%;
-    width:550px;
-    opacity:.08;
-    filter:blur(1px);
-    animation:float 8s ease-in-out infinite;
-}
-
-/* ===== EXCLUSIVE ===== */
-.exclusive{
-    padding:120px 8vw;
-}
-
-.exclusive h2{
-    font-size:52px;
-    letter-spacing:12px;
-    margin-bottom:20px;
-}
-
-.exclusive p{
-    color:#aaa;
-    margin-bottom:60px;
-}
-
-.grid{
-    display:grid;
-    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-    gap:30px;
-}
-
-.card{
-    position:relative;
-    border-radius:22px;
-    overflow:hidden;
-    background:#111;
-    transform:translateY(40px);
-    opacity:0;
-    animation:fadeUp .8s ease forwards;
-}
-.card:nth-child(2){animation-delay:.2s}
-.card:nth-child(3){animation-delay:.4s}
-.card:nth-child(4){animation-delay:.6s}
-
-.card img{
-    width:100%;
-    display:block;
-    transition:.6s;
-}
-.card:hover img{
-    transform:scale(1.1);
-}
-
-.card span{
-    position:absolute;
-    bottom:20px;
-    left:20px;
-    font-weight:600;
-    letter-spacing:3px;
-}
-
-/* ===== DESCUENTO ===== */
-.promo{
-    position:fixed;
-    bottom:30px;
-    right:30px;
-    background:#fff;
-    color:#000;
-    padding:14px 20px;
-    border-radius:40px;
-    font-weight:700;
-    box-shadow:0 0 30px rgba(255,255,255,.6);
-}
-
-/* ===== ANIMACIONES ===== */
-@keyframes fadeUp{
-    to{transform:none;opacity:1}
-}
-@keyframes float{
-    0%,100%{transform:translateY(0)}
-    50%{transform:translateY(-25px)}
-}
+/* Footer spacing */
+footer{height:120px}
 </style>
 </head>
 
 <body>
+
 <div class="bg"></div>
 
 <header>
-    <div class="logo">
-        <img src="logo.jpg">
-        <span>BOUTIQUE · MIRANDA FLOW</span>
-    </div>
-    <nav>
-        <a href="index.html">INICIO</a>
-        <a href="tienda.html">TIENDA</a>
-    </nav>
+  <div class="brand">
+    <img src="logo.jpg" alt="Miranda Flow">
+    <span>BOUTIQUE · MIRANDA FLOW</span>
+  </div>
+  <nav class="nav">
+    <a href="index.html">INICIO</a>
+    <a href="tienda.html">TIENDA</a>
+    <a href="carrito.html">CARRITO</a>
+  </nav>
 </header>
 
-<a href="carrito.html" class="cart">🛒</a>
+<a href="tienda.html" class="back">←</a>
 
-<section class="hero">
-    <img src="logo.jpg" class="logo-bg">
+<section class="main">
 
-    <div class="hero-card">
-        <h1>MIRANDA<br>FLOW</h1>
-        <p>
-            Prendas con presencia.<br>
-            Estilo que se impone sin hablar.<br><br>
-            Esto no es una tienda.<br>
-            Es la entrada a un ecosistema.
-        </p>
+  <div class="product-img">
+    <img src="exclusive-1.jpg" alt="Producto">
+  </div>
 
-        <div class="actions">
-            <a href="prendas.html" class="btn-main">ENTRAR A PRENDAS →</a>
-            <a href="#exclusive" class="btn-alt">VER EXCLUSIVE ↓</a>
-        </div>
+  <div class="info">
+    <h1>PIEZA EXCLUSIVA</h1>
+
+    <p>
+      Prenda de muestra del ecosistema Miranda Flow.  
+      No es solo ropa: es presencia, nivel y entrada a un sistema.
+    </p>
+
+    <div class="tags">
+      <div class="tag">EDICIÓN LIMITADA</div>
+      <div class="tag">BOUTIQUE</div>
+      <div class="tag">SISTEMA Z</div>
     </div>
+
+    <div class="actions">
+      <a href="tienda.html" class="primary">VOLVER A TIENDA →</a>
+      <a href="carrito.html" class="secondary">AGREGAR AL CARRITO</a>
+    </div>
+  </div>
+
 </section>
 
-<section class="exclusive" id="exclusive">
-    <h2>EXCLUSIVE</h2>
-    <p>Drop visual de muestra. No productos. Presencia.</p>
-
-    <div class="grid">
-        <div class="card"><img src="exclusive-1.jpg"><span>EXCLUSIVE I</span></div>
-        <div class="card"><img src="exclusive-2.jpg"><span>EXCLUSIVE II</span></div>
-        <div class="card"><img src="exclusive-3.jpg"><span>EXCLUSIVE III</span></div>
-        <div class="card"><img src="exclusive-4.jpg"><span>EXCLUSIVE IV</span></div>
-    </div>
-</section>
-
-<div class="promo">🎁 -20% HOY</div>
+<footer></footer>
 
 </body>
 </html>
