--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Producto | Miranda Flow Boutique</title>
+<title>Miranda Flow Boutique</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
-html{scroll-behavior:smooth}
 body{
   font-family:'Inter',sans-serif;
   background:#000;
@@ -17,211 +16,223 @@ body{
   overflow-x:hidden;
 }
 
-/* Glow background */
-.bg{
+/* FONDO LOGO */
+.bg-logo{
   position:fixed;
-  inset:-30%;
-  background:
-    radial-gradient(900px 500px at 20% 10%, rgba(0,120,255,.15), transparent),
-    radial-gradient(800px 500px at 80% 80%, rgba(0,255,180,.12), transparent);
-  filter:blur(120px);
-  z-index:-1;
+  inset:0;
+  background:url('logo.jpg') center/420px no-repeat;
+  opacity:.06;
+  filter:blur(6px);
+  z-index:-2;
 }
 
-/* Header */
+/* HEADER */
 header{
   position:fixed;
-  top:0;left:0;width:100%;
+  top:0;
+  width:100%;
+  padding:18px 22px;
   display:flex;
-  align-items:center;
   justify-content:space-between;
-  padding:20px 32px;
-  background:rgba(0,0,0,.55);
-  backdrop-filter:blur(16px);
-  border-bottom:1px solid rgba(255,255,255,.08);
-  z-index:10;
+  align-items:center;
+  background:linear-gradient(to bottom,rgba(0,0,0,.85),transparent);
+  z-index:100;
 }
+
 .brand{
   display:flex;
   align-items:center;
   gap:12px;
 }
-.brand img{
+.brand img{width:36px}
+.brand span{
+  font-size:13px;
+  letter-spacing:2px;
+  font-weight:700;
+}
+
+nav{
+  display:flex;
+  gap:24px;
+}
+nav a{
+  color:#aaa;
+  text-decoration:none;
+  font-size:14px;
+}
+nav a:hover{color:#fff}
+
+.cart{
   width:42px;
   height:42px;
-  border-radius:10px;
-}
-.brand span{
-  font-weight:800;
-  letter-spacing:.2em;
-  font-size:.75rem;
-  opacity:.85;
-}
-.nav{
-  display:flex;
-  gap:28px;
-}
-.nav a{
-  color:#fff;
-  text-decoration:none;
-  font-size:.85rem;
-  letter-spacing:.12em;
-  opacity:.75;
-  transition:.3s;
-}
-.nav a:hover{opacity:1}
-
-/* Back button */
-.back{
-  position:fixed;
-  top:92px;
-  left:24px;
-  width:46px;
-  height:46px;
   border-radius:50%;
+  background:rgba(255,255,255,.08);
   display:flex;
   align-items:center;
   justify-content:center;
-  background:rgba(255,255,255,.08);
-  backdrop-filter:blur(10px);
-  font-size:1.2rem;
-  cursor:pointer;
-  transition:.3s;
-  z-index:5;
-}
-.back:hover{background:rgba(255,255,255,.18)}
-
-/* Product layout */
-.main{
-  padding:160px 10vw 120px;
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:80px;
-}
-@media(max-width:900px){
-  .main{grid-template-columns:1fr}
-}
-
-/* Image */
-.product-img{
-  background:rgba(255,255,255,.04);
-  border-radius:32px;
-  padding:40px;
-}
-.product-img img{
-  width:100%;
-  border-radius:24px;
-}
-
-/* Info */
-.info h1{
-  font-size:clamp(2.2rem,4vw,3.5rem);
-  font-weight:800;
-  letter-spacing:.15em;
-}
-.info p{
-  margin-top:18px;
-  opacity:.7;
-  line-height:1.7;
-  max-width:520px;
-}
-
-/* Tags */
-.tags{
-  display:flex;
-  gap:12px;
-  margin:26px 0;
-  flex-wrap:wrap;
-}
-.tag{
-  padding:8px 16px;
-  border-radius:999px;
-  background:rgba(255,255,255,.08);
-  font-size:.7rem;
-  letter-spacing:.14em;
-}
-
-/* Actions */
-.actions{
-  margin-top:32px;
-  display:flex;
-  gap:18px;
-  flex-wrap:wrap;
-}
-.actions a{
-  padding:14px 26px;
-  border-radius:999px;
   text-decoration:none;
-  font-size:.75rem;
-  letter-spacing:.14em;
-  transition:.3s;
-}
-.primary{
-  background:#fff;
-  color:#000;
-}
-.primary:hover{opacity:.85}
-.secondary{
-  border:1px solid rgba(255,255,255,.3);
   color:#fff;
 }
-.secondary:hover{
-  background:#fff;
-  color:#000;
+
+/* HERO */
+.hero{
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  padding:120px 20px 80px;
 }
 
-/* Footer spacing */
-footer{height:120px}
+.card{
+  max-width:480px;
+  background:rgba(255,255,255,.06);
+  backdrop-filter:blur(18px);
+  border-radius:28px;
+  padding:46px;
+  box-shadow:0 40px 90px rgba(0,0,0,.7);
+}
+
+.card h1{
+  font-size:48px;
+  font-weight:800;
+  line-height:1.05;
+}
+
+.card p{
+  margin-top:20px;
+  color:#d0d0d0;
+  font-size:15px;
+  line-height:1.6;
+}
+
+.actions{
+  margin-top:36px;
+  display:flex;
+  flex-direction:column;
+  gap:14px;
+}
+
+.btn-main{
+  background:#fff;
+  color:#000;
+  padding:16px;
+  border-radius:14px;
+  font-weight:600;
+  text-align:center;
+  text-decoration:none;
+}
+
+.btn-sec{
+  border:1px solid rgba(255,255,255,.3);
+  color:#fff;
+  padding:14px;
+  border-radius:14px;
+  text-align:center;
+  text-decoration:none;
+}
+
+/* EXCLUSIVE */
+.exclusive{
+  padding:100px 20px;
+}
+
+.exclusive h2{
+  font-size:36px;
+  letter-spacing:6px;
+  margin-bottom:36px;
+}
+
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
+  gap:26px;
+}
+
+.grid img{
+  width:100%;
+  border-radius:22px;
+  filter:brightness(.75);
+  transform:translateY(30px);
+  opacity:0;
+  animation:fadeUp .8s forwards;
+}
+
+.grid img:nth-child(2){animation-delay:.15s}
+.grid img:nth-child(3){animation-delay:.3s}
+.grid img:nth-child(4){animation-delay:.45s}
+
+@keyframes fadeUp{
+  to{
+    transform:translateY(0);
+    opacity:1;
+    filter:brightness(1);
+  }
+}
+
+/* DESCUENTO */
+.discount{
+  position:fixed;
+  bottom:22px;
+  right:22px;
+  background:#fff;
+  color:#000;
+  padding:14px 18px;
+  border-radius:40px;
+  font-weight:700;
+  font-size:14px;
+}
+
+@media(max-width:600px){
+  .card h1{font-size:40px}
+}
 </style>
 </head>
 
 <body>
 
-<div class="bg"></div>
+<div class="bg-logo"></div>
 
 <header>
   <div class="brand">
-    <img src="logo.jpg" alt="Miranda Flow">
+    <img src="logo.jpg">
     <span>BOUTIQUE · MIRANDA FLOW</span>
   </div>
-  <nav class="nav">
-    <a href="index.html">INICIO</a>
-    <a href="tienda.html">TIENDA</a>
-    <a href="carrito.html">CARRITO</a>
+
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="tienda.html">Tienda</a>
   </nav>
+
+  <a href="carrito.html" class="cart">🛒</a>
 </header>
 
-<a href="tienda.html" class="back">←</a>
-
-<section class="main">
-
-  <div class="product-img">
-    <img src="exclusive-1.jpg" alt="Producto">
-  </div>
-
-  <div class="info">
-    <h1>PIEZA EXCLUSIVA</h1>
-
+<section class="hero">
+  <div class="card">
+    <h1>MIRANDA<br>FLOW</h1>
     <p>
-      Prenda de muestra del ecosistema Miranda Flow.  
-      No es solo ropa: es presencia, nivel y entrada a un sistema.
+      Prendas con presencia.<br>
+      Esto no es una tienda.<br>
+      Es la entrada a un ecosistema.
     </p>
 
-    <div class="tags">
-      <div class="tag">EDICIÓN LIMITADA</div>
-      <div class="tag">BOUTIQUE</div>
-      <div class="tag">SISTEMA Z</div>
-    </div>
-
     <div class="actions">
-      <a href="tienda.html" class="primary">VOLVER A TIENDA →</a>
-      <a href="carrito.html" class="secondary">AGREGAR AL CARRITO</a>
+      <a href="prendas.html" class="btn-main">ENTRAR A PRENDAS →</a>
+      <a href="#exclusive" class="btn-sec">VER EXCLUSIVE ↓</a>
     </div>
   </div>
-
 </section>
 
-<footer></footer>
+<section id="exclusive" class="exclusive">
+  <h2>EXCLUSIVE</h2>
+  <div class="grid">
+    <img src="exclusive-1.jpg">
+    <img src="exclusive-2.jpg">
+    <img src="exclusive-3.jpg">
+    <img src="exclusive-4.jpg">
+  </div>
+</section>
+
+<div class="discount">🎁 -20% HOY</div>
 
 </body>
 </html>
