--- a/index.html
+++ b/index.html
@@ -16,17 +16,23 @@ body{
   overflow-x:hidden;
 }
 
-/* FONDO LOGO */
+/* ===== LOGO FONDO CON VIDA ===== */
 .bg-logo{
   position:fixed;
-  inset:0;
-  background:url('logo.jpg') center/420px no-repeat;
-  opacity:.06;
-  filter:blur(6px);
+  inset:-20%;
+  background:url('logo.jpg') center/520px no-repeat;
+  opacity:.08;
+  filter:blur(10px);
+  animation:floatLogo 18s ease-in-out infinite;
   z-index:-2;
 }
+@keyframes floatLogo{
+  0%{transform:scale(1) translateY(0)}
+  50%{transform:scale(1.05) translateY(-20px)}
+  100%{transform:scale(1) translateY(0)}
+}
 
-/* HEADER */
+/* ===== HEADER ===== */
 header{
   position:fixed;
   top:0;
@@ -53,7 +59,7 @@ header{
 
 nav{
   display:flex;
-  gap:24px;
+  gap:26px;
 }
 nav a{
   color:#aaa;
@@ -62,19 +68,29 @@ nav a{
 }
 nav a:hover{color:#fff}
 
+/* ===== CARRITO DISCRETO ===== */
 .cart{
-  width:42px;
-  height:42px;
+  position:fixed;
+  top:20px;
+  right:18px;
+  width:40px;
+  height:40px;
   border-radius:50%;
-  background:rgba(255,255,255,.08);
+  background:rgba(255,255,255,.1);
   display:flex;
   align-items:center;
   justify-content:center;
   text-decoration:none;
   color:#fff;
+  font-size:18px;
+  animation:cartIn .6s ease forwards;
+}
+@keyframes cartIn{
+  from{opacity:0;transform:scale(.7)}
+  to{opacity:1;transform:scale(1)}
 }
 
-/* HERO */
+/* ===== HERO ===== */
 .hero{
   min-height:100vh;
   display:flex;
@@ -85,11 +101,16 @@ nav a:hover{color:#fff}
 
 .card{
   max-width:480px;
-  background:rgba(255,255,255,.06);
-  backdrop-filter:blur(18px);
-  border-radius:28px;
+  background:rgba(255,255,255,.07);
+  backdrop-filter:blur(22px);
+  border-radius:30px;
   padding:46px;
-  box-shadow:0 40px 90px rgba(0,0,0,.7);
+  box-shadow:0 50px 120px rgba(0,0,0,.8);
+  animation:cardIn .8s ease forwards;
+}
+@keyframes cardIn{
+  from{opacity:0;transform:translateY(40px)}
+  to{opacity:1;transform:translateY(0)}
 }
 
 .card h1{
@@ -131,15 +152,20 @@ nav a:hover{color:#fff}
   text-decoration:none;
 }
 
-/* EXCLUSIVE */
+/* ===== EXCLUSIVE ===== */
 .exclusive{
-  padding:100px 20px;
+  padding:110px 20px;
 }
 
 .exclusive h2{
-  font-size:36px;
-  letter-spacing:6px;
-  margin-bottom:36px;
+  font-size:38px;
+  letter-spacing:8px;
+  margin-bottom:40px;
+  opacity:0;
+  animation:fadeTitle .8s ease forwards;
+}
+@keyframes fadeTitle{
+  to{opacity:1}
 }
 
 .grid{
@@ -151,15 +177,16 @@ nav a:hover{color:#fff}
 .grid img{
   width:100%;
   border-radius:22px;
-  filter:brightness(.75);
-  transform:translateY(30px);
+  filter:brightness(.7);
+  transform:translateY(40px);
   opacity:0;
   animation:fadeUp .8s forwards;
 }
 
-.grid img:nth-child(2){animation-delay:.15s}
-.grid img:nth-child(3){animation-delay:.3s}
-.grid img:nth-child(4){animation-delay:.45s}
+.grid img:nth-child(1){animation-delay:.2s}
+.grid img:nth-child(2){animation-delay:.35s}
+.grid img:nth-child(3){animation-delay:.5s}
+.grid img:nth-child(4){animation-delay:.65s}
 
 @keyframes fadeUp{
   to{
@@ -169,17 +196,18 @@ nav a:hover{color:#fff}
   }
 }
 
-/* DESCUENTO */
+/* ===== DESCUENTO ===== */
 .discount{
   position:fixed;
-  bottom:22px;
-  right:22px;
+  bottom:20px;
+  right:20px;
   background:#fff;
   color:#000;
   padding:14px 18px;
   border-radius:40px;
   font-weight:700;
   font-size:14px;
+  animation:fadeUp .6s ease forwards;
 }
 
 @media(max-width:600px){
@@ -202,9 +230,9 @@ nav a:hover{color:#fff}
     <a href="index.html">Inicio</a>
     <a href="tienda.html">Tienda</a>
   </nav>
-
-  <a href="carrito.html" class="cart">🛒</a>
 </header>
+
+<a href="carrito.html" class="cart">🛒</a>
 
 <section class="hero">
   <div class="card">
