--- a/carrito.html
+++ b/carrito.html
@@ -1,238 +1,161 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Carrito | Miranda Flow Boutique</title>
+  <meta charset="UTF-8">
+  <title>Carrito | Miranda Flow Boutique</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <!-- Fuente premium -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-<style>
-*{margin:0;padding:0;box-sizing:border-box}
-body{
-  font-family:'Inter',sans-serif;
-  background:#000;
-  color:#fff;
-  overflow-x:hidden;
-}
+  <style>
+    *{
+      margin:0;
+      padding:0;
+      box-sizing:border-box;
+      -webkit-tap-highlight-color: transparent;
+    }
 
-/* Glow background */
-.bg{
-  position:fixed;
-  inset:-30%;
-  background:
-    radial-gradient(900px 500px at 20% 20%, rgba(0,120,255,.15), transparent),
-    radial-gradient(800px 500px at 80% 80%, rgba(0,255,180,.12), transparent);
-  filter:blur(120px);
-  z-index:-1;
-}
+    body{
+      font-family:'Inter',system-ui,-apple-system;
+      background:#000;
+      color:#fff;
+      min-height:100vh;
+      overflow-x:hidden;
+    }
 
-/* Header */
-header{
-  position:fixed;
-  top:0;left:0;width:100%;
-  display:flex;
-  align-items:center;
-  justify-content:space-between;
-  padding:20px 32px;
-  background:rgba(0,0,0,.55);
-  backdrop-filter:blur(16px);
-  border-bottom:1px solid rgba(255,255,255,.08);
-  z-index:10;
-}
-.brand{
-  display:flex;
-  align-items:center;
-  gap:12px;
-}
-.brand img{
-  width:42px;
-  height:42px;
-  border-radius:10px;
-}
-.brand span{
-  font-weight:800;
-  letter-spacing:.2em;
-  font-size:.75rem;
-  opacity:.85;
-}
-.nav{
-  display:flex;
-  gap:28px;
-}
-.nav a{
-  color:#fff;
-  text-decoration:none;
-  font-size:.85rem;
-  letter-spacing:.12em;
-  opacity:.75;
-}
-.nav a:hover{opacity:1}
+    /* ===== BACKGROUND SUAVE ===== */
+    .bg{
+      position:fixed;
+      inset:-20%;
+      background:
+        radial-gradient(600px 400px at 20% 20%, rgba(255,255,255,.08), transparent 60%),
+        radial-gradient(700px 500px at 80% 60%, rgba(0,255,200,.08), transparent 65%);
+      filter:blur(20px);
+      z-index:-1;
+    }
 
-/* Back button */
-.back{
-  position:fixed;
-  top:92px;
-  left:24px;
-  width:46px;
-  height:46px;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  background:rgba(255,255,255,.08);
-  backdrop-filter:blur(10px);
-  font-size:1.2rem;
-  cursor:pointer;
-  transition:.3s;
-  z-index:5;
-}
-.back:hover{background:rgba(255,255,255,.18)}
+    /* ===== BOTÓN VOLVER (SIEMPRE A INDEX) ===== */
+    .back-btn{
+      position:fixed;
+      top:20px;
+      left:20px;
+      z-index:100;
+      text-decoration:none;
+      color:#fff;
+      font-size:18px;
+      padding:10px 14px;
+      border-radius:14px;
+      background:rgba(255,255,255,.12);
+      backdrop-filter:blur(14px);
+      border:1px solid rgba(255,255,255,.25);
+    }
+    .back-btn:hover{
+      background:rgba(255,255,255,.22);
+    }
 
-/* Main */
-.main{
-  padding:160px 10vw 120px;
-  max-width:1200px;
-  margin:auto;
-}
+    /* ===== CONTENEDOR ===== */
+    .wrap{
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:90px 16px 40px;
+    }
 
-.main h1{
-  font-size:clamp(2.5rem,5vw,4rem);
-  font-weight:800;
-  letter-spacing:.15em;
-  margin-bottom:40px;
-}
+    /* ===== CARD CARRITO ===== */
+    .card{
+      width:100%;
+      max-width:420px;
+      background:rgba(255,255,255,.08);
+      border:1px solid rgba(255,255,255,.18);
+      border-radius:26px;
+      padding:34px 26px 38px;
+      text-align:center;
+      backdrop-filter:blur(18px);
+      animation:fadeUp .6s ease;
+    }
 
-/* Cart items */
-.item{
-  display:grid;
-  grid-template-columns:120px 1fr auto;
-  gap:30px;
-  align-items:center;
-  padding:24px;
-  margin-bottom:20px;
-  background:rgba(255,255,255,.05);
-  border-radius:22px;
-}
-.item img{
-  width:120px;
-  border-radius:16px;
-}
-.item h3{
-  font-size:1rem;
-  letter-spacing:.12em;
-}
-.item p{
-  opacity:.6;
-  font-size:.85rem;
-}
+    @keyframes fadeUp{
+      from{opacity:0; transform:translateY(30px)}
+      to{opacity:1; transform:translateY(0)}
+    }
 
-/* Price */
-.price{
-  font-size:1rem;
-  opacity:.8;
-}
+    .icon{
+      width:70px;
+      height:70px;
+      margin:0 auto 20px;
+      border-radius:50%;
+      background:rgba(255,255,255,.15);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size:34px;
+    }
 
-/* Summary */
-.summary{
-  margin-top:60px;
-  padding:40px;
-  border-radius:28px;
-  background:rgba(255,255,255,.06);
-}
-.summary h2{
-  font-size:1.4rem;
-  letter-spacing:.12em;
-  margin-bottom:20px;
-}
-.summary p{
-  opacity:.7;
-  margin-bottom:30px;
-}
+    h1{
+      font-size:28px;
+      font-weight:700;
+      margin-bottom:12px;
+    }
 
-.actions{
-  display:flex;
-  gap:20px;
-  flex-wrap:wrap;
-}
-.actions a{
-  padding:14px 30px;
-  border-radius:999px;
-  text-decoration:none;
-  font-size:.75rem;
-  letter-spacing:.14em;
-  transition:.3s;
-}
-.primary{
-  background:#fff;
-  color:#000;
-}
-.secondary{
-  border:1px solid rgba(255,255,255,.3);
-  color:#fff;
-}
-.secondary:hover{
-  background:#fff;
-  color:#000;
-}
-</style>
+    p{
+      font-size:15px;
+      line-height:1.6;
+      color:rgba(255,255,255,.75);
+      margin-bottom:26px;
+    }
+
+    .note{
+      font-size:13px;
+      color:rgba(255,255,255,.5);
+    }
+
+    /* ===== BOTÓN IR A TIENDA ===== */
+    .btn{
+      display:inline-block;
+      margin-top:24px;
+      padding:14px 22px;
+      border-radius:18px;
+      font-weight:600;
+      text-decoration:none;
+      color:#000;
+      background:#fff;
+      transition:.2s;
+    }
+    .btn:hover{
+      transform:translateY(-2px);
+    }
+  </style>
 </head>
 
 <body>
 
-<div class="bg"></div>
+  <div class="bg"></div>
 
-<header>
-  <div class="brand">
-    <img src="logo.jpg">
-    <span>BOUTIQUE · MIRANDA FLOW</span>
-  </div>
-  <nav class="nav">
-    <a href="index.html">INICIO</a>
-    <a href="tienda.html">TIENDA</a>
-  </nav>
-</header>
+  <!-- Flecha volver (SIEMPRE index) -->
+  <a href="index.html" class="back-btn">← Volver</a>
 
-<a href="tienda.html" class="back">←</a>
+  <div class="wrap">
+    <div class="card">
 
-<section class="main">
+      <div class="icon">🛒</div>
 
-  <h1>CARRITO</h1>
+      <h1>Carrito</h1>
 
-  <!-- Item demo -->
-  <div class="item">
-    <img src="exclusive-1.jpg">
-    <div>
-      <h3>PIEZA EXCLUSIVA</h3>
-      <p>Producto de muestra · Ecosistema Miranda Flow</p>
-    </div>
-    <div class="price">$120</div>
-  </div>
+      <p>
+        Tu carrito está vacío por ahora.<br>
+        Estás explorando el ecosistema <strong>Miranda Flow</strong>.
+      </p>
 
-  <div class="item">
-    <img src="exclusive-2.jpg">
-    <div>
-      <h3>COLECCIÓN LIMITADA</h3>
-      <p>Visual demo · Maqueta funcional</p>
-    </div>
-    <div class="price">$140</div>
-  </div>
+      <a href="tienda.html" class="btn">Ir a la tienda</a>
 
-  <div class="summary">
-    <h2>RESUMEN</h2>
-    <p>
-      Este carrito es una maqueta visual.  
-      No se realizan cobros reales.  
-      Sirve para mostrar el flujo completo del ecosistema.
-    </p>
+      <div class="note" style="margin-top:18px;">
+        Esto es una maqueta visual. Sin pagos activos.
+      </div>
 
-    <div class="actions">
-      <a href="tienda.html" class="secondary">SEGUIR COMPRANDO</a>
-      <a href="#" class="primary">FINALIZAR (DEMO)</a>
     </div>
   </div>
-
-</section>
 
 </body>
 </html>
